--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -40,12 +40,24 @@
   align-items: center;
   justify-content: center;
   z-index: 10;
+  background: var(--card-bg-blue);
+}
+
+.auth-bg-svg-cnt{
+  position: relative;
+  width: 90%;
+  height: 50%;
+  display: flex;
+  overflow-y: hidden;
+
 }
 
 .auth-bg-svg {
+  position: absolute;
+  right:-110%;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .auth-right-cnt {
