--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -37,8 +37,9 @@
   width: 40%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   z-index: 10;
   background: var(--card-bg-blue);
 }
@@ -57,8 +58,43 @@
   right:-110%;
   width: 100%;
   height: 100%;
+  scale:0;
+  opacity:0;
   object-fit: contain;
 }
+
+.animated-toggle-bar{
+  position: relative;
+  width: 4rem;
+  height: .5rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 .1rem;
+}
+
+.circle-1{
+  width: .5rem;
+  height: .5rem;
+  border-radius: 5rem;
+  background-color: #fff;
+  position: absolute;
+}
+
+.circle-2{
+  left: 1.7rem;
+  top: 0rem;
+}
+.circle-3{
+  left: 3.3rem;
+  top: 0rem;
+}
+
+/* .circle-animated{
+  position: absolute;
+  left: 10px;
+  top: 1;
+
+} */
 
 .auth-right-cnt {
   width: 60%;
