--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -2,7 +2,7 @@
 
 .auth-container {
   width: 100vw;
-  height: 100vh;
+height: 100vh;
   background-color: var(--bg-light-gray);
   display: flex;
   align-items: center;
@@ -246,7 +246,7 @@
 .login-input {
   width: 100%;
   height: 100%;
-  padding-left: 1rem;
+  padding: 1rem;
   border: 2px solid #737373;
   background-color: #eff7ff;
   border-radius: 0.5rem;
