--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -2,7 +2,7 @@
 
 .auth-container {
   width: 100vw;
-height: 100vh;
+  height: 100vh;
   background-color: var(--bg-light-gray);
   display: flex;
   align-items: center;
@@ -44,47 +44,46 @@ height: 100vh;
   background: var(--card-bg-blue);
 }
 
-.auth-bg-svg-cnt{
+.auth-bg-svg-cnt {
   position: relative;
   width: 90%;
   height: 80%;
   display: flex;
   overflow-y: hidden;
-
 }
 
 .auth-bg-svg {
   position: absolute;
-  right:-110%;
+  right: -110%;
   width: 100%;
   height: 100%;
-  scale:0;
-  opacity:0;
+  scale: 0;
+  opacity: 0;
   object-fit: contain;
 }
 
-.animated-toggle-bar{
+.animated-toggle-bar {
   position: relative;
   width: 4rem;
-  height: .5rem;
+  height: 0.5rem;
   display: flex;
   justify-content: space-between;
-  padding: 0 .1rem;
+  padding: 0 0.1rem;
 }
 
-.circle-1{
-  width: .5rem;
-  height: .5rem;
+.circle-1 {
+  width: 0.5rem;
+  height: 0.5rem;
   border-radius: 5rem;
   background-color: #fff;
   position: absolute;
 }
 
-.circle-2{
+.circle-2 {
   left: 1.7rem;
   top: 0rem;
 }
-.circle-3{
+.circle-3 {
   left: 3.3rem;
   top: 0rem;
 }
@@ -132,7 +131,7 @@ height: 100vh;
 }
 
 .auth-mail-img {
-  width: 50%;
+  max-width: 50%;
   height: 20%;
   object-fit: contain;
   margin-top: 2rem;
@@ -184,7 +183,8 @@ height: 100vh;
 }
 
 .frgt-pswrd-center-cnt {
-  width: 60%;
+  max-width: 60%;
+  max-width: 90%;
   height: 80%;
   display: flex;
   flex-direction: column;
@@ -370,10 +370,10 @@ height: 100vh;
   cursor: pointer;
 }
 
-.signup-form{
+.signup-form {
   width: 60%;
 }
 
-.signup-input-cnt{
-  margin-bottom:1rem;
+.signup-input-cnt {
+  margin-bottom: 1rem;
 }
