--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -157,7 +157,7 @@
   font-weight: 500;
   color: #666666;
   text-align: center;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
 }
 
 .gmail-button {
