--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -239,7 +239,6 @@
   position: relative;
   width: 100%;
   height: 3rem;
-  margin: 0.625rem 0;
   margin-bottom: 1rem;
 }
 
@@ -253,6 +252,7 @@
   font-weight: 600;
   font-size: 1rem;
   color: #000000;
+  outline: none;
 }
 
 .input-absolute-img {
