--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -1,5 +1,953 @@
 @import "../../App.css";
 
+.screen-container {
+  width: 100vw;
+  height: 100vh;
+  background-color: #e5e7eb; /* bg-gray-200 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* shadow-custom */
+  display: flex;
+  overflow: hidden;
+}
+
+.left-panel {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: 0 1.5rem 1.5rem 0; /* rounded-r-2xl */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 0;
+}
+
+.auth-content-left {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 10;
+  background-color: #2250ae;
+  display: none;
+}
+
+.image-container {
+  position: relative;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  overflow-y: hidden;
+}
+
+.auth-bg-svg {
+  position: absolute;
+  right: -110%;
+  width: 100%;
+  height: 100%;
+  transform: scale(0);
+  opacity: 0;
+  object-fit: contain;
+}
+
+.circle-container {
+  position: relative;
+  width: 4rem;
+  height: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0.1rem;
+}
+
+.circle {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: white;
+  position: absolute;
+}
+
+.circle-2 {
+  left: 1.5rem;
+  top: 0;
+}
+
+.circle-3 {
+  left: 3rem;
+  top: 0;
+}
+
+.right-panel {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+}
+
+.email-container {
+  width: 100%;
+  gap: 3rem;
+  /* height: 100%; */
+  background-color: white;
+  border-radius: 0 1.5rem 1.5rem 0; /* rounded-r-2xl */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 2rem; /* pt-8 */
+}
+
+.logo-container {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%; /* rounded-full */
+  padding: 1rem; /* p-4 */
+  background-color: #d3d3d3; /* bg-light-gray */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.mail-sent-img {
+  max-width: 20rem;
+  height: 6rem;
+  object-fit: contain;
+  margin-top: 2rem; /* md:mt-8 */
+}
+
+.mail-sent-msg-cnt {
+  text-align: center;
+}
+
+.email-sent-title {
+  font-size: 2.5rem;
+  font-weight: 600; /* font-semibold */
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.email-sent-subtitle {
+  font-size: 1rem;
+  font-weight: 500; /* font-medium */
+  color: #4b5563; /* text-gray-600 */
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.gmail-button {
+  cursor: pointer;
+}
+
+.gmail-button h3 {
+  font-size: 1.125rem; /* text-lg */
+}
+
+.forgot-password-container {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: 0 1.5rem 1.5rem 0; /* rounded-r-2xl */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 2rem 0; /* pt-8 pb-8 */
+}
+
+.forgot-password-content {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo-container {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%; /* rounded-full */
+  padding: 1rem; /* p-4 */
+  background-color: #d3d3d3; /* bg-light-gray */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.forgot-password-details {
+  width: 80%;
+  max-width: 20rem;
+  max-height: 80%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1rem; /* mt-4 */
+}
+
+.forgot-password-title {
+  font-size: 1.5rem;
+  font-weight: 600; /* font-semibold */
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.lock-img {
+  max-width: 50%;
+  height: 25%;
+  object-fit: contain;
+  margin-top: 2rem; /* md:mt-8 */
+}
+
+.forgot-password-subtitle {
+  font-size: 1rem;
+  font-weight: 500; /* font-medium */
+  color: #4b5563; /* text-gray-600 */
+  text-align: center;
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.input-container {
+  position: relative;
+  width: 100%;
+  min-height: 2.5rem; /* min-h-10 */
+  height: 6.5vh;
+  max-height: 3rem;
+  margin-top: 1rem; /* mb-4 */
+}
+
+.email-input {
+  width: 100%;
+  max-width: 20rem;
+  margin: auto;
+  height: 100%;
+  padding: 0.5rem 1rem; /* px-4 py-2 */
+  border: 2px solid #d1d5db; /* border-gray-300 */
+  background-color: #ebf8ff; /* bg-blue-50 */
+  border-radius: 0.375rem; /* rounded-md */
+  font-weight: 600; /* laptop-h:font-semibold */
+  font-size: 1rem; /* laptop-h:text-base */
+  color: black;
+  outline: none;
+}
+
+.mail-icon {
+  position: absolute;
+  width: 1.5rem;
+  height: 100%;
+  object-fit: contain;
+  right: 1rem; /* right-4 */
+  top: 0;
+  cursor: pointer;
+  padding: 0.25rem; /* p-1 */
+}
+
+.send-button {
+  width: 100%;
+  max-width: 20rem;
+  min-height: 2.5rem;
+  border-radius: 0.5rem; /* rounded-lg */
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 500; /* font-medium */
+  color: white;
+  background-color: #2250ae;
+}
+
+.remember-password-container {
+  width: 70%;
+  /* height: auto; */
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  align-self: flex-end;
+}
+
+.remember-password-text {
+  font-size: 1rem;
+  font-weight: 500; /* font-medium */
+  color: #4b5563; /* text-gray-600 */
+  text-align: center;
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.login-link {
+  color: #3b82f6; /* text-blue-600 */
+  cursor: pointer;
+}
+
+.login-container {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: 0 1.5rem 1.5rem 0; /* rounded-r-2xl */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 3.5rem 0; /* py-14 */
+}
+
+.logo-container {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%; /* rounded-full */
+  padding: 1rem; /* p-4 */
+  background-color: #d3d3d3; /* bg-light-gray */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.login-details {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.login-title {
+  font-size: 2.5rem;
+  font-weight: 600; /* font-semibold */
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.login-subtitle {
+  font-size: 1rem;
+  font-weight: 500; /* font-medium */
+  color: #4b5563; /* text-gray-600 */
+  text-align: center;
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.login-form {
+  width: 100%;
+}
+
+.input-container {
+  position: relative;
+  width: 100%;
+  min-height: 2.5rem; /* min-h-10 */
+  height: 6.5vh;
+  max-height: 3rem;
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 1rem; /* px-4 py-2 */
+  border: 2px solid #d1d5db; /* border-gray-300 */
+  background-color: #ebf8ff; /* bg-blue-50 */
+  border-radius: 0.375rem; /* rounded-md */
+  font-weight: 400; /* font-normal */
+  font-size: 1rem; /* md:font-semibold, md:text-base */
+  color: black;
+  outline: none;
+}
+
+.input-error {
+  font-size: 0.7rem;
+  color: #ef4444; /* text-red-500 */
+  font-weight: 500; /* font-medium */
+  text-align: left;
+}
+
+.icon {
+  position: absolute;
+  width: 1.5rem;
+  height: 100%;
+  object-fit: contain;
+  right: 1rem; /* right-4 */
+  top: 0;
+  cursor: pointer;
+  padding: 0.25rem; /* p-1 */
+}
+
+.options-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.25rem; /* mb-5 */
+  color: #4b5563; /* text-gray-600 */
+  align-items: center;
+}
+
+.checkbox-label {
+  display: flex;
+  height: 2rem; /* h-8 */
+  justify-content: space-around;
+  align-items: center;
+  font-size: 1rem; /* text-base */
+}
+
+.checkbox {
+  margin-right: 0.5rem; /* for spacing between checkbox and text */
+}
+
+.checkbox-text {
+  font-size: 0.8rem; /* text-[.8rem] */
+  font-size: 1rem; /* md:text-[1rem] */
+}
+
+.forgot-password-link {
+  color: #3b82f6; /* text-blue-600 */
+  cursor: pointer;
+  text-decoration: underline;
+  font-size: 0.8rem; /* text-[.8rem] */
+  font-size: 1rem; /* md:text-[1rem] */
+}
+
+.login-button {
+  width: 100%;
+  height: 2.8rem;
+  border-radius: 0.5rem; /* rounded-lg */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 500; /* font-medium */
+  color: white;
+  background-color: #2250ae;
+}
+
+.divider-container {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.25rem; /* mt-5 */
+  color: #666666;
+}
+
+.divider {
+  width: 40%;
+  height: 1.5px;
+  background-color: #4b5563; /* bg-gray-600 */
+}
+
+.divider-text {
+  font-weight: 600; /* font-semibold */
+}
+
+.social-login-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 0.5rem; /* gap-2 */
+}
+
+.social-login-button {
+  max-width: 3rem; /* max-w-12 */
+  max-height: 3rem; /* max-h-12 */
+  height: 6.5vh;
+  margin: 0.25rem; /* m-1 */
+  background-color: transparent;
+  border: 2px solid #d1d5db; /* border-gray-300 */
+  border-radius: 0.375rem; /* rounded-md */
+  font-size: 1rem; /* text-base */
+  font-weight: 500; /* font-medium */
+  cursor: pointer;
+}
+
+.social-login-icon {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  padding: 0.75rem; /* p-3 */
+  filter: grayscale(100%);
+  transition: filter 0.2s ease-in-out;
+}
+
+.social-login-icon:hover {
+  filter: grayscale(0%);
+}
+
+.signup-link-container {
+  margin-top: 1.25rem; /* mt-5 */
+  color: #4b5563; /* text-gray-600 */
+}
+
+.signup-link {
+  color: #3b82f6; /* text-blue-600 */
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.forgot-password-container {
+  width: 100vw; /* w-screen */
+  height: 100vh; /* h-screen */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.forgot-password-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.logo-container {
+  width: 5rem; /* w-20 */
+  height: 5rem; /* h-20 */
+  border-radius: 50%; /* rounded-full */
+  padding: 1rem; /* p-4 */
+  background-color: #d3d3d3; /* bg-light-gray */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.forgot-password-content {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.forgot-password-img {
+  max-width: 50%;
+  height: 25%;
+  object-fit: contain;
+}
+
+.forgot-password-form {
+  width: 90%;
+}
+
+.input-container {
+  position: relative;
+  width: 100%;
+  height: 3rem; /* h-12 */
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 1rem; /* px-4 py-2 */
+  border: 2px solid #d1d5db; /* border-gray-300 */
+  background-color: #ebf8ff; /* bg-blue-50 */
+  border-radius: 0.375rem; /* rounded-md */
+  font-weight: 400; /* font-normal */
+  font-size: 1rem; /* md:font-semibold, tablet-w:text-base */
+  color: black;
+  outline: none;
+}
+
+.input-icon {
+  position: absolute;
+  width: 1.5rem;
+  height: 100%;
+  object-fit: contain;
+  right: 1rem; /* right-4 */
+  top: 0;
+  cursor: pointer;
+  padding: 0.25rem; /* p-1 */
+}
+
+.update-password-button {
+  width: 100%;
+  height: 2.75rem; /* h-11 */
+  border-radius: 0.375rem; /* rounded-md */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 1.25rem; /* text-xl */
+  font-weight: 500; /* font-medium */
+  color: white;
+  background-color: var(--card-bg-blue);
+}
+
+.message {
+  margin-top: 1rem; /* mt-4 */
+  color: red;
+  font-weight: 500; /* font-medium */
+}
+
+.signup-container {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: 1rem; /* rounded-r-2xl */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 1rem; 
+}
+
+.signup-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.logo-container {
+  width: 5rem; /* w-20 */
+  height: 5rem; /* h-20 */
+  border-radius: 50%; /* rounded-full */
+  padding: 1rem; /* p-4 */
+  background-color: #d3d3d3; /* bg-light-gray */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.signup-title {
+  font-size: 2.5rem;
+  font-weight: 600; /* font-semibold */
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.signup-subtitle {
+  font-size: 1rem;
+  font-weight: 500; /* font-medium */
+  color: #4b5563; /* text-gray-600 */
+  text-align: center;
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.signup-form {
+  width: 90%;
+  max-width: 20rem;
+}
+
+.input-container {
+  position: relative;
+  width: 100%;
+  min-height: 2.5rem; /* min-h-10 */
+  height: 6.5vh;
+  max-height: 3rem;
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 1rem; /* px-4 py-2 */
+  border: 2px solid #d1d5db; /* border-gray-300 */
+  background-color: #ebf8ff; /* bg-blue-50 */
+  border-radius: 0.375rem; /* rounded-md */
+  font-weight: 400; /* font-normal */
+  font-size: 1rem; /* md:font-semibold, md:text-base */
+  color: black;
+  outline: none;
+}
+
+.input-icon {
+  position: absolute;
+  width: 1.5rem;
+  height: 100%;
+  object-fit: contain;
+  right: 1rem; /* right-4 */
+  top: 0;
+  cursor: pointer;
+  padding: 0.25rem; /* p-1 */
+}
+
+.input-error {
+  font-size: 0.7rem;
+  color: #ef4444; /* text-red-500 */
+  font-weight: 500; /* font-medium */
+}
+
+.signup-button {
+  width: 90%;
+  max-width: 20rem;
+  height: 5rem;
+  max-height: 2.75rem; /* max-h-11 */
+  border-radius: 0.375rem; /* rounded-md */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 1.25rem; /* text-xl */
+  font-weight: 500; /* font-medium */
+  color: white;
+  background-color: var(--card-bg-blue);
+  padding: 1.5rem; /* py-6 */
+}
+
+
+.login-link {
+  margin-top: 1.25rem;
+  color: #4b5563; 
+}
+
+.login-link-action {
+  color: #2563eb; 
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.login-link-action:hover {
+  text-decoration: underline;
+}
+
+
+
+.social-buttons {
+  width: 100%;
+  max-width: 20rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 0.5rem; /* gap-2 */
+}
+
+.social-button {
+  width: 3rem;
+  height: 6.5vh;
+  max-height: 3rem; /* max-h-12 */
+  margin: 0.25rem; /* m-1 */
+  background-color: transparent;
+  border: 2px solid #d1d5db; /* border-gray-300 */
+  border-radius: 0.375rem; /* rounded-md */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.social-icon {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  padding: 0.75rem;
+  filter: grayscale(100%);
+}
+
+.social-icon:hover {
+  filter: grayscale(0%);
+}
+
+/* Media Queries */
+@media (min-width: 1024px) {
+  .main-container {
+    max-width: 70%;
+    max-height: 90%;
+    border-radius: 1.5rem;
+  }
+
+  .left-panel {
+    max-width: 60%;
+  }
+
+  .auth-content-left {
+    display: flex;
+  }
+
+  .right-panel {
+    width: 60%;
+  }
+  .logo-container {
+    width: 5rem; /* laptop-h:w-20 */
+    height: 5rem; /* laptop-h:h-20 */
+  }
+
+  .email-sent-title {
+    font-size: 2.5rem; /* laptop-h:text-[2.5rem] */
+  }
+
+  .email-sent-subtitle {
+    font-size: 1.125rem; /* laptop-w:text-lg */
+    margin-bottom: 1rem; /* laptop-h:mb-4 */
+  }
+  .forgot-password-details {
+    height: 80%; /* laptop-h:h-[80%] */
+  }
+
+  .forgot-password-title {
+    font-size: 2.5rem; /* laptop-w:text-[2.5rem] */
+  }
+
+  .forgot-password-subtitle {
+    font-size: 1.125rem; /* laptop-h:text-lg */
+    margin-bottom: 1rem; /* laptop-h:mb-4 */
+  }
+
+  .email-input {
+    font-size: 1rem; /* laptop-h:text-base */
+    font-weight: 600; /* laptop-h:font-semibold */
+  }
+
+  .login-container {
+    width: 70%; /* laptop-w:w-[60%] */
+  }
+
+  .logo-container {
+    width: 5rem; /* laptop-h:w-20 */
+    height: 5rem; /* laptop-h:h-20 */
+  }
+
+  .login-details {
+    height: auto; /* laptop-w:h-[auto] */
+    width: 80%; /* laptop-w:w-[80%] */
+  }
+
+  .login-title {
+    font-size: 2.5rem; /* laptop-h:text-[2.5rem] */
+  }
+
+  .login-subtitle {
+    font-size: 1.5rem; /* laptop-h:text-lg */
+    margin-bottom: 1rem; /* laptop-h:mb-4 */
+  }
+
+  .forgot-password-form {
+    width: 100%; /* md:w-[70%] */
+  }
+
+  .input {
+    font-weight: 600; /* md:font-semibold */
+  }
+  
+
+  .signup-title {
+    font-size: 2.5rem; /* laptop-h:text-[2.5rem] */
+  }
+
+  .signup-subtitle {
+    font-size: 1.125rem; /* laptop-h:text-lg */
+  }
+
+  .signup-button {
+    padding: 1.5rem; /* laptop-h:py-6 */
+  }
+}
+
+@media (min-width: 768px) {
+  .auth-content-left {
+    width: 40%;
+  }
+  .logo-container {
+    width: 3.5rem; /* tablet-h:w-14 */
+    height: 3.5rem; /* tablet-h:h-14 */
+  }
+
+  .email-sent-title {
+    font-size: 1.5rem; /* tablet-h:text-[1.5rem] */
+  }
+
+  .email-sent-subtitle {
+    font-size: 0.8rem; /* tablet-h:text-[0.8rem] */
+  }
+  .forgot-password-content {
+    width: 100%; /* tablet-w:w-[40%] */
+  }
+
+  .forgot-password-img {
+    margin-top: 2rem; /* tablet-w:mt-8 */
+  }
+
+  .input {
+    font-size: 1rem; /* tablet-w:text-base */
+  }
+
+  .forgot-password-title {
+    font-size: 1.5rem; /* tablet-h:text-[1.5rem] */
+  }
+
+  .forgot-password-subtitle {
+    font-size: 1rem; /* tablet-h:text-[0.8rem] */
+  }
+  .login-container {
+    padding: 2rem 0;
+    max-width: 70%;
+  }
+
+  .logo-container {
+    width: 3.5rem; /* tablet-h:w-14 */
+    height: 3.5rem; /* tablet-h:h-14 */
+  }
+
+  .login-title {
+    font-size: 1.5rem; /* tablet-h:text-[1.5rem] */
+  }
+
+  .login-subtitle {
+    font-size: 0.8rem; /* tablet-h:text-[0.8rem] */
+  }
+  .logo-container {
+    width: 3.5rem; /* tablet-h:w-14 */
+    height: 3.5rem; /* tablet-h:h-14 */
+  }
+
+  .signup-title {
+    font-size: 1.5rem;
+  }
+  .signup-subtitle {
+    font-size: 0.8rem; 
+  }
+
+  .signup-button {
+    padding: 0.75rem;
+  }
+}
+
 /* .auth-container {
   width: 100vw;
   height: 100vh;
@@ -365,10 +1313,6 @@
   text-decoration: none;
   color: #004aad;
   cursor: pointer;
-}
-
-.signup-form {
-  width: 60%;
 }
 
 .signup-input-cnt {
