--- a/src/GWA/Reviews/reviews.css
+++ b/src/GWA/Reviews/reviews.css
@@ -5,12 +5,25 @@
   height: 100vh;
   display: flex;
   padding: 2rem;
+  background: #f7faff;
 }
 
 .demo-sidebar {
   width: 18rem;
   height: calc(90 - 2rem);
-  background: gray;
+  background: rgb(253, 253, 253);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  padding: 2rem;
+}
+
+.demo-sidebar p {
+  cursor: pointer;
+  width: 5rem;
+  height: 2rem;
+  background: #bababa;
 }
 
 .reviews-cnt {
@@ -22,7 +35,7 @@
 .demo-top-component {
   width: 100%;
   height: 3rem;
-  background: greenyellow;
+  background: rgb(253, 255, 250);
 }
 
 .reviews {
