--- a/src/GWA/Blogs/blogs.css
+++ b/src/GWA/Blogs/blogs.css
@@ -1,6 +1,6 @@
 .create-blog-cnt {
   width: 100%;
-  height: 34.5rem;
+  height: 35.5rem;
   background-color: #fff;
   padding: 2rem;
 }
@@ -39,10 +39,184 @@
   font-weight: 500;
 }
 
-.text-editor-cnt{
+.text-editor-cnt {
   margin-top: 2rem;
 }
 
-.text-editor{
+.text-editor {
   height: 10rem;
+}
+
+.blog-long-input-cnt {
+  width: 100%;
+  height: 2.5rem;
+  position: relative;
+  margin-top: 4rem;
+  border-radius: 0.5rem;
+  border: 1px solid #e9e9e9;
+}
+
+.file-input {
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.choose-file-label {
+  position: absolute;
+  right: 0;
+  width: 8rem;
+  top: 0;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background: rgb(216, 216, 246);
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  border-radius: 0.5rem;
+}
+
+.absolute-file-name {
+  position: absolute;
+  left: 1rem;
+  top: 0;
+  width: fit-content;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.btns-cnt {
+  width: 100%;
+  height: 2.5rem;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 2rem;
+  /* background: #000; */
+  font-family: "Poppins", sans-serif;
+
+  margin-top: 1rem;
+}
+
+.action-btn {
+  width: 8rem;
+  height: 100%;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #2e37a4;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.status-input-cnt {
+  position: relative;
+  width: 30rem;
+}
+
+.checkbox-cnt {
+  width: fit-content;
+  display: flex;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
+}
+.checkbox {
+  border-radius: 50%;
+  background: #000;
+}
+
+.select-option-cnt {
+  max-width: fit-content;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 1rem;
+}
+
+.select-option-cnt p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  color: #33344880;
+}
+
+.blogs-cnt {
+  width: 100%;
+  height: 35.5rem;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.bloglist-cover {
+  width: 60%;
+  height: 100%;
+}
+
+.widget-cnt {
+  width: 35%;
+  height: 100%;
+  /* background: #a6cdff; */
+}
+
+.thoughts-cnt {
+  width: 100%;
+  height: 6rem;
+  padding: 0rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 4px 49px 0px #6d6d6d1f;
+  border-radius: 0.5rem;
+}
+
+.thoughts-input {
+  width: 90%;
+  height: 3rem;
+  outline: none;
+  border: none;
+  border-radius: 0.4rem;
+  padding: 0.5rem;
+  padding-left: 1rem;
+  background: #e6e6e6b5;
+}
+
+.add-btn {
+  width: 3rem;
+  height: 3rem;
+  background: #272848;
+  border-radius: 0.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.blog-list-cnt {
+  width: 100%;
+  height: 30rem;
+  overflow-y: scroll;
+  margin-top: 2rem;
+}
+
+.blog-card-cnt {
+  width: 100%;
+  height: 20rem;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  box-shadow: 0px 4px 49px 0px #6d6d6d1f;
+  background-color: #fff;
+}
+
+.blog-card-img {
+  width: 100%;
+  height: 50%;
+  border-radius: 0.5rem;
 }
