--- a/src/GWA/Blogs/blogs.css
+++ b/src/GWA/Blogs/blogs.css
@@ -149,7 +149,7 @@
 
 .blogs-cnt {
   width: 100%;
-  height: 35.5rem;
+  height: 150vh;
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
@@ -162,8 +162,149 @@
 
 .widget-cnt {
   width: 35%;
-  height: 100%;
+  min-height: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  overflow-y: scroll;
+
   /* background: #a6cdff; */
+}
+
+.related-post-cnt {
+  width: 100%;
+  height: 30rem;
+  border-radius: 1rem;
+  background: #ffffff;
+  padding: 0.8rem;
+  overflow: hidden;
+}
+
+.related-post-head {
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #e9e9e9;
+  margin-top: 0;
+}
+
+.widget-card {
+  width: 100%;
+  min-height: 5rem;
+  display: flex;
+  gap: 1rem;
+  cursor: pointer;
+  padding: 0 0 0.5rem 0;
+  border-bottom: 1px solid #e9e9e9;
+  flex-wrap: wrap;
+}
+
+.suggestion-List {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-top: 1rem;
+  /* overflow-y: scroll; */
+}
+
+.widget-img-preview {
+  width: 4rem;
+  height: 3rem;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+.post-details-cnt {
+  width: calc(100% - 5rem);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-tag-time {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.post-preview-tag {
+  font-family: "Poppins", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 500;
+  padding: 0.15rem 0.4rem;
+  border-radius: 0.5rem;
+  background: #e9e9e9;
+}
+.post-preview-date {
+  font-family: "Poppins", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: #33344880;
+}
+
+.post-details-cnt h4 {
+  font-family: "Poppins", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #272848;
+}
+
+.widget-card-readMore-cnt {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
+
+.tags-widget-cnt {
+  width: 100%;
+  height: 15rem;
+  max-height: fit-content;
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: #fff;
+}
+
+.tags-flex {
+  width: 100%;
+  height: 80%;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+.widget-tag {
+  height: fit-content;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 500;
+  padding: 0.15rem 0.4rem;
+  border-radius: 0.5rem;
+  background: #e9e9e9;
+}
+
+.category-flex {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-top: 0.7rem;
+}
+
+.widget-category-cnt {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.widget-category-cnt p {
+  font-family: "Poppins", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 600;
 }
 
 .thoughts-cnt {
@@ -201,22 +342,115 @@
 
 .blog-list-cnt {
   width: 100%;
-  height: 30rem;
+  height: 80%;
   overflow-y: scroll;
-  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 1rem;
+  background: #f7faff;
 }
 
 .blog-card-cnt {
   width: 100%;
-  height: 20rem;
+  height: 31rem;
+  max-height: fit-content;
   border-radius: 0.5rem;
   padding: 1rem;
   box-shadow: 0px 4px 49px 0px #6d6d6d1f;
   background-color: #fff;
+  cursor: pointer;
 }
 
 .blog-card-img {
   width: 100%;
-  height: 50%;
+  height: 60%;
+  object-fit: cover;
   border-radius: 0.5rem;
+}
+
+.add-icon {
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
+}
+
+.blog-card-profileInfo-cnt {
+  width: 80%;
+  height: 2.5rem;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background: #d6d6d657; */
+}
+
+.profileInfo-cnt {
+  width: fit-content;
+  height: 100%;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.blog-card-profile-img {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+}
+
+.profileInfo h4 {
+  font-family: "Poppins", sans-serif;
+  color: #333448;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.profileInfo p {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: #33354880;
+  font-family: "Poppins", sans-serif;
+}
+
+.date-info-cnt {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.blue-text {
+  font-family: "Poppins", sans-serif;
+  color: #0167ff;
+  font-size: 0.9em;
+  font-weight: 600;
+}
+
+.blog-content-preview-cnt {
+  width: 80%;
+  height: 5rem;
+  margin-top: 1rem;
+}
+
+.blog-content-preview-cnt h4 {
+  font-family: "Poppins", sans-serif;
+  color: #333448;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.blog-content-preview-cnt p {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: #33354880;
+  font-family: "Poppins", sans-serif;
+}
+
+.readMore-cnt {
+  font-family: "Poppins", sans-serif;
+  color: #0167ff;
+  font-size: 1rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
