--- a/src/GWA/Reviews/reviews.css
+++ b/src/GWA/Reviews/reviews.css
@@ -41,13 +41,13 @@
 .reviews {
   width: 100%;
   height: calc(100 - 6rem);
-  margin-top: 3rem;
+  margin-top: 1.5rem;
 }
 
 .reviews-title {
   color: #272848;
   font-weight: 700;
-  font-size: 32px;
+  font-size: 1.5rem;
   padding-left: 0.5rem;
   font-family: "Poppins", sans-serif;
 }
@@ -55,7 +55,7 @@
 .reviews-list-cnt {
   width: 100%;
   height: 34.5rem;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   padding: 0.5rem;
   gap: 0.6rem;
   display: flex;
