--- a/src/GWA/Blogs/blogs.css
+++ b/src/GWA/Blogs/blogs.css
@@ -149,7 +149,7 @@
 
 .blogs-cnt {
   width: 100%;
-  height: 150vh;
+  max-height: 200vh;
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
@@ -453,4 +453,55 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.blog-cnt {
+  width: 100%;
+  min-height: 35rem;
+}
+
+.blog-post-cnt {
+  width: 100%;
+  height: fit-content;
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: #fff;
+}
+
+.blog-status-info {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem 0;
+}
+
+.blog-status-info p {
+  color: #33344880;
+  font-size: 0.7rem;
+}
+
+.date-info-cnt {
+  gap: 0.5rem;
+}
+
+.blog-status {
+  display: flex;
+  gap: 1rem;
+  width: fit-content;
+}
+
+.blog-image{
+  width: 100%;
+  min-height: 25rem;
+  object-fit: cover;
+}
+
+.blog-description{
+  margin-top: 1rem;
+  font-family: "Poppins", sans-serif;
+  color:#33344880;
+  font-size: 0.8rem;
+  font-weight: 400;
+  text-align: justify;
 }
