--- a/src/GWA/Reviews/reviews.css
+++ b/src/GWA/Reviews/reviews.css
@@ -10,7 +10,7 @@
 
 .demo-sidebar {
   width: 18rem;
-  height: calc(90 - 2rem);
+  height: 90vh;
   background: rgb(253, 253, 253);
   display: flex;
   flex-direction: column;
