--- a/src/GWA/Blogs/blogs.css
+++ b/src/GWA/Blogs/blogs.css
@@ -149,7 +149,7 @@
 
 .blogs-cnt {
   width: 100%;
-  max-height: 200vh;
+  /* max-height: 200vh; */
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
@@ -173,7 +173,7 @@
 
 .related-post-cnt {
   width: 100%;
-  height: 30rem;
+  max-height: fit-content;
   border-radius: 1rem;
   background: #ffffff;
   padding: 0.8rem;
@@ -491,17 +491,162 @@
   width: fit-content;
 }
 
-.blog-image{
+.blog-image {
   width: 100%;
   min-height: 25rem;
   object-fit: cover;
 }
 
-.blog-description{
-  margin-top: 1rem;
+.blog-description {
+  margin-top: 2rem;
   font-family: "Poppins", sans-serif;
-  color:#33344880;
+  color: #33344880;
   font-size: 0.8rem;
   font-weight: 400;
   text-align: justify;
+}
+
+.social-reach-cnt {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.social-icon {
+  width: 1.6rem;
+  height: 1.6rem;
+  padding: 0.3rem;
+  border-radius: 0.2rem;
+  background: #c0c0c080;
+}
+
+.social-reach-cnt p {
+  color: #33344880;
+  font-size: 0.8rem;
+  font-weight: 700;
+}
+
+.blog-tags {
+  width: 100%;
+  flex-wrap: wrap;
+  display: flex;
+  gap: 1rem;
+  margin-top: 1.5rem;
+}
+
+.blogger-details-cnt {
+  width: 100%;
+  margin-top: 3rem;
+  border-radius: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  background-color: #fff;
+}
+
+.profile-img {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+}
+
+.profile-bio {
+  text-align: center;
+}
+
+.profile-socials-cnt {
+  display: flex;
+  gap: 1rem;
+  width: fit-content;
+}
+
+.comments-cnt {
+  margin-top: 3rem;
+  padding: 1rem;
+  width: 100%;
+  gap: 1rem;
+  border-radius: 1rem;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
+.comments-title {
+  font-family: "Poppins", sans-serif;
+  color: #2d2e3f;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.comment-cnt {
+  width: 100%;
+  min-height: 8rem;
+  height: fit-content;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.comment {
+  width: 80%;
+  height: fit-content;
+}
+
+.comment-time-txt {
+  font-size: 0.7rem;
+  font-family: "Poppins", sans-serif;
+  color: #33344880;
+  font-weight: 600;
+}
+
+.comment-txt {
+  font-size: 0.8rem;
+  font-family: "Poppins", sans-serif;
+  color: #33344880;
+  font-weight: 500;
+  text-align: justify;
+}
+
+.replay-btn {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  cursor: pointer;
+}
+
+.post-comment-cnt {
+  width: 100%;
+  min-height: 20rem;
+  margin-top: 3rem;
+  border-radius: 1rem;
+  padding: 1rem;
+  background-color: #fff;
+}
+
+.comment-top-input-flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+}
+
+.comment-input {
+  min-height: 8rem;
+  margin-top: 1.5rem;
+}
+
+.comment-term-conformation-cnt{
+  display: flex;
+  gap: .5rem;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.comment-checkbox{
+  width: 1rem;
+  height: 1rem;
+  border-radius: 2rem;
+  font-weight: 600;
 }
